# downing_detect

./: .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml  requirements.txt  start_backend.bat  start_backend.sh  train.py
backend/: __init__.py  api.py  models.py
backend/api/: camera.py  config.py  detection.py  incidents.py
backend/core/: __init__.py  audio_manager.py  detection_utils.py  email_notifier.py  incident_manager.py  logger.py  model_loader.py  settings.py  video_processor.py  vlm_client.py  vlm_worker.py
backend/services/: camera_service.py  detection_service.py  incident_service.py  websocket_manager.py
config/: settings.example copy.yaml
docs/: IMPLEMENTATION_SUMMARY.md  QUICKSTART.md  README_CN.md  README_WEB.md  TROUBLESHOOTING.md  UPDATE_SUMMARY.md  UV_GUIDE.md  UV_MIGRATION.md  design.md
frontend/: package-lock.json  package.json
frontend/electron/: main.js  preload.js
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/pages/: DetectionPage.tsx  DetectionPage_old.tsx  IncidentPage.tsx  SettingsPage.tsx
frontend/src/services/: api.ts
src/: audio_manager.py  detection_utils.py  downing_detect_video.py  downing_detect_webcam.py  model_loader.py  video_processor.py
test_tools/: check_env.py  run.sh  test_camera.py  test_imports.py
test_tools/excuatable/: fix_torch.ps1  start_backend.bat  start_backend.sh
